After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 688182 - Dark window decorations broken with GTK+ master
Dark window decorations broken with GTK+ master
Status: RESOLVED FIXED
Product: mutter
Classification: Core
Component: general
unspecified
Other All
: Normal normal
: ---
Assigned To: mutter-maint
mutter-maint
Depends on:
Blocks:
 
 
Reported: 2012-11-12 16:09 UTC by Florian Müllner
Modified: 2012-11-12 18:32 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
frames: Bump priority of style providers (1.12 KB, patch)
2012-11-12 16:09 UTC, Florian Müllner
committed Details | Review

Description Florian Müllner 2012-11-12 16:09:05 UTC
Since GTK+ commit b1ad5c8abc2c, GtkSetting's CSS provider uses a
priority of GTK_STYLE_PROVIDER_PRIORITY_SETTINGS, which means it
will overwrite the ones we create ourselves.
Bump the priority to fix dark window decorations.
Comment 1 Florian Müllner 2012-11-12 16:09:08 UTC
Created attachment 228787 [details] [review]
frames: Bump priority of style providers
Comment 2 Jasper St. Pierre (not reading bugmail) 2012-11-12 17:00:03 UTC
Review of attachment 228787 [details] [review]:

Sure.
Comment 3 Florian Müllner 2012-11-12 18:32:04 UTC
Attachment 228787 [details] pushed as 93a16f6 - frames: Bump priority of style providers